manifest/pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: democloud
  labels:
    app: democloud
  annotations:
    vault.hashicorp.com/agent-inject: "true"
    vault.hashicorp.com/role: "democloud"
    vault.hashicorp.com/agent-inject-secret-credentials.txt: "secret/data/democloud/config"
spec:
  serviceAccountName: internal-app
  containers:
    - name: democloud
      image: ghcr.io/ahakra/demo_cloud:d8707fc
