manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: democloud
  labels:
    app: democloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: democloud
  template:
    metadata:
      labels:
        app: democloud
    spec:
      serviceAccountName: internal-app
      containers:
        - name: democloud
          image: ghcr.io/ahakra/demo_cloud:${IMAGE_TAG} # Placeholder for the image
          ports:
            - containerPort: 4000
----

apiVersion: v1
kind: Service
metadata:
  name: democloud-service
  labels:
    app: democloud
spec:
  selector:
    app: democloud
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80          # External port exposed by the LoadBalancer
      targetPort: 4000  # Port your container is listening on
